--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -13,7 +13,7 @@
     <x>0</x>
     <y>0</y>
     <width>410</width>
-    <height>362</height>
+    <height>425</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -30,8 +30,8 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>410</width>
-    <height>362</height>
+    <width>800</width>
+    <height>800</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -39,7 +39,7 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="sizePolicy">
-    <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
      <horstretch>0</horstretch>
      <verstretch>0</verstretch>
     </sizepolicy>
@@ -86,10 +86,40 @@
        <item row="1" column="1">
         <widget class="QSpinBox" name="dpiSpinBox">
          <property name="maximum">
-          <number>900</number>
+          <number>2700</number>
          </property>
          <property name="value">
-          <number>400</number>
+          <number>600</number>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item>
+     <widget class="QGroupBox" name="albumPropertiesGroup">
+      <property name="title">
+       <string>Album properties</string>
+      </property>
+      <layout class="QFormLayout" name="formLayout">
+       <item row="0" column="0">
+        <widget class="QLabel" name="albumNameLabel">
+         <property name="text">
+          <string>Album folder</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QLineEdit" name="lineEdit">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QPushButton" name="pushButton">
+         <property name="text">
+          <string>Choose folder</string>
          </property>
         </widget>
        </item>
@@ -196,7 +226,7 @@
         </widget>
        </item>
        <item row="5" column="1">
-        <widget class="QDoubleSpinBox" name="widthComboBox">
+        <widget class="QDoubleSpinBox" name="widthSpinBox">
          <property name="enabled">
           <bool>false</bool>
          </property>
@@ -224,7 +254,6 @@
   <tabstop>pictureFormatComboBox</tabstop>
   <tabstop>unitsComboBox</tabstop>
   <tabstop>heightSpinBox</tabstop>
-  <tabstop>widthComboBox</tabstop>
  </tabstops>
  <resources/>
  <connections/>
